--- a/app/src/main/res/layout/activity_stock_opname.xml
+++ b/app/src/main/res/layout/activity_stock_opname.xml
@@ -45,10 +45,10 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <LinearLayout
+        <ScrollView
             android:id="@+id/layout_penugasan"
-            android:layout_width="348dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@drawable/border_solid"
@@ -177,14 +177,14 @@
                 android:id="@+id/btn_simpan_stockOpname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="end"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_rounded_accent"
                 android:text="SIMPAN"
                 android:textColor="@color/white_transparency" />
 
 
-        </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
