--- a/app/src/main/res/layout/activity_terima_part.xml
+++ b/app/src/main/res/layout/activity_terima_part.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
+    android:fitsSystemWindows="true"
+    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,7 +23,9 @@
                 android:id="@+id/recyclerView_terimaPart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_terima_part" />
+                tools:listitem="@layout/item_terima_part"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -31,17 +35,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize">
+                android:layout_height="?attr/actionBarSize"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:titleTextColor="@color/white_transparency">
 
             </android.support.v7.widget.Toolbar>
-        </FrameLayout>
 
         <RelativeLayout
             android:id="@+id/search_layout"
