--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -2,6 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_height="match_parent">
 
     <ScrollView
