--- a/app/src/main/res/layout/activity_booking1_a_.xml
+++ b/app/src/main/res/layout/activity_booking1_a_.xml
@@ -2,8 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -33,7 +33,7 @@
                         android:id="@+id/et_nopol_booking1a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:maxLength="10"
                         android:hint="NO. POLISI" />
 
@@ -307,7 +307,9 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_booking1"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@color/white_transparency" />
 
     </android.support.design.widget.AppBarLayout>
 
