--- a/app/src/main/res/layout/activity_booking2_.xml
+++ b/app/src/main/res/layout/activity_booking2_.xml
@@ -2,8 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,7 +22,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp">
 
@@ -31,57 +31,53 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="TANGGAL BOOKING"/>
-
-                <Button
-                    android:id="@+id/btn_getTgl_booking2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/icon_tanggal"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:layout_marginLeft="10dp"/>
+                    android:gravity="center"
+                    android:textAlignment="textStart"
+                    android:drawableRight="@drawable/icon_tanggal"
+                    android:text="TANGGAL BOOKING"
+                    tools:ignore="RtlCompat" />
 
                 <TextView
                     android:id="@+id/tv_jamBooking_booking2"
                     android:layout_width="wrap_content"
                     android:textStyle="bold"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:drawableRight="@drawable/icon_jam"
                     android:text="JAM BOOKING" />
 
-                <Button
-                    android:id="@+id/btn_getJam_booking2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/icon_jam"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp">
 
+
                 <TextView
-                    android:id="@+id/tv_jemput_booking2"
-                    android:layout_width="130dp"
+                    android:id="@+id/tv_jamJemput_booking2"
+                    android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="JAM JEMPUT"/>
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="JAM JEMPUT" />
 
                 <TextView
                     android:id="@+id/btn_getJemput_booking2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/icon_jam"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp" />
-
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                     />
 
             </LinearLayout>
 
@@ -143,18 +139,20 @@
                 android:layout_marginRight="10dp">
 
                 <TextView
-                    android:id="@+id/tv_antar_booking2"
-                    android:layout_width="130dp"
+                    android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
                     android:text="JAM ANTAR" />
 
                 <TextView
-                    android:id="@+id/btn_getAntar_booking2"
+                    android:id="@+id/tv_jamAntar_booking2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/icon_jam"
-                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:layout_weight="1"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"/>
 
