--- a/app/src/main/res/layout/activity_daftar_jurnal_.xml
+++ b/app/src/main/res/layout/activity_daftar_jurnal_.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:animateLayoutChanges="true"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
 
