--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,186 +16,214 @@
             android:layout_height="match_parent"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-
             app:toolbarId="@+id/toolbar">
 
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+                android:layout_height="?attr/actionBarSize" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10sp"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/border_solid"
+            android:orientation="vertical"
+            android:padding="10sp"
             tools:context=".modules.terima_part.DetailPartDiterima">
 
-            <LinearLayout
-                android:layout_width="250sp"
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:hint="NO. PART">
 
-                <TextView
-                    android:id="@+id/textView19"
+
+                <EditText
+                    android:id="@+id/tv_noPart_terimaPart"
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="No. PART" />
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:inputType="textPersonName" />
 
-                <TextView
-                    android:id="@+id/textView23"
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="NAMA PART">
+
+                <EditText
+                    android:id="@+id/tv_namaPart_terimaPart"
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="Nama PART" />
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:inputType="textPersonName" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/textView25"
-                        android:layout_width="wrap_content"
-                        android:layout_height="50sp"
-                        android:layout_weight="1"
-                        android:text="JUMLAH" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="JUMLAH">
+
 
                     <EditText
-                        android:id="@+id/txtJumlah"
-                        android:layout_width="70sp"
+                        android:id="@+id/tv_jumlah_terimaPart"
+                        android:layout_width="match_parent"
                         android:layout_height="50sp"
-                        android:layout_weight="1"
                         android:ems="10"
+                        android:enabled="false"
                         android:inputType="textPersonName" />
 
-                </LinearLayout>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btn_scan_terimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:text="SCAN"
+                    android:textColor="@color/white_transparency" />
+
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:hint="HARGA BELI UNIT">
+
+
+                <EditText
+                    android:id="@+id/txtHargaBeliUnit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:hint="DISKON BELI">
+
+                <EditText
+                    android:id="@+id/txtDiskonBeli"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView28"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="HARGA BELI/UNIT" />
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="LOKASI SIMPAN"
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="DISCOUNT BELI" />
-
-                <TextView
-                    android:id="@+id/textView30"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="LOKASI SIMPAN" />
-
-                <TextView
-                    android:id="@+id/textView31"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="PENEMPATAN" />
+                <Spinner
+                    android:id="@+id/spinnerLokasiSimpan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:entries="@array/lokasi_simpan" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/txtNoPart"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:ems="10"
-                    android:enabled="false"
-                    android:inputType="textPersonName" />
-
-                <EditText
-                    android:id="@+id/txtNamaPart"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:ems="10"
-                    android:enabled="false"
-                    android:inputType="textPersonName" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btnScan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="50sp"
-                        android:layout_weight="1"
-                        android:text="SCAN" />
-
-                </LinearLayout>
-
-                <EditText
-                    android:id="@+id/txtHargaBeliUnit"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:ems="10"
-                    android:inputType="number"
-                    android:hint="Rp." />
-
-                <EditText
-                    android:id="@+id/txtDiskonBeli"
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="50sp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
-
-                <Spinner
-                    android:id="@+id/spinnerLokasiSimpan"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:entries="@array/lokasi_simpan" />
+                    android:text="PENEMPATAN"
+                    android:textStyle="bold" />
 
                 <Spinner
                     android:id="@+id/spinnerPenempatan"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:entries="@array/penempatan" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_simpan_terimaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="150dp"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:gravity="center"
+                    android:text="SIMPAN"
+                    android:textColor="@color/white_transparency" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_tambah_detailpart_terima"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_add" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
-
-    <Button
-        android:id="@+id/btnTutup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|left"
-        android:layout_marginStart="20sp"
-        android:layout_marginTop="280sp"
-        android:background="@drawable/btn_rounded_accent"
-        android:text="Tutup" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_tambah_detailpart_terima"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|right"
-        android:layout_marginEnd="20sp"
-        android:layout_marginTop="280sp"
-        android:clickable="true"
-        app:srcCompat="@drawable/ic_add" />
+    </ScrollView>
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
