--- a/app/src/main/res/layout/activity_atur_biaya_mekanik.xml
+++ b/app/src/main/res/layout/activity_atur_biaya_mekanik.xml
@@ -14,7 +14,7 @@
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
-
+            android:theme="@style/AppTheme.AppBarOverlay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,7 +28,8 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:titleTextColor="@color/white_transparency" />
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             </FrameLayout>
         </android.support.design.widget.AppBarLayout>
