--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -7,7 +7,8 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -16,7 +17,9 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </FrameLayout>
 
@@ -69,7 +72,7 @@
                 <EditText
                     android:id="@+id/txtNamaSupplier"
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
+                    android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="NAMA SUPPLIER"
                     android:inputType="text" />
