--- a/app/src/main/res/layout/activity_booking3_.xml
+++ b/app/src/main/res/layout/activity_booking3_.xml
@@ -110,14 +110,16 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-
+        android:theme="@style/AppTheme.AppBarOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
             android:id="@+id/toolbar_booking3"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+            android:layout_height="?attr/actionBarSize" />
 
     </android.support.design.widget.AppBarLayout>
 
