--- a/app/src/main/res/layout/activity_cari_part_.xml
+++ b/app/src/main/res/layout/activity_cari_part_.xml
@@ -10,7 +10,8 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:orientation="vertical"
@@ -18,7 +19,6 @@
             android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="150dp"
             android:id="@+id/recyclerView_cariPart"
             tools:listitem="@layout/item_daftar_cari_part"
             android:layout_width="match_parent"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
             android:background="@color/colorPrimary"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:padding="5dp">
 
 
             <android.support.design.widget.TextInputLayout
@@ -71,18 +71,8 @@
                     android:inputType="text"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:textAlignment="center"
                     android:textColor="@color/grey_80"
                     android:textColorHint="@android:color/darker_gray" />
-
-                <ProgressBar
-                    android:id="@+id/pb_tv_cariPart"
-                    style="?android:attr/progressBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|right"
-                    android:layout_marginRight="5dp"
-                    android:visibility="gone"/>
 
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
