--- a/app/src/main/res/layout/activity_layanan__avtivity.xml
+++ b/app/src/main/res/layout/activity_layanan__avtivity.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
             android:background="@color/colorPrimary"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:padding="5dp">
 
 
             <android.support.design.widget.TextInputLayout
