--- a/app/src/main/res/layout/activity_spot_discount_.xml
+++ b/app/src/main/res/layout/activity_spot_discount_.xml
@@ -30,11 +30,13 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-
+        android:theme="@style/AppTheme.AppBarOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
             android:id="@+id/toolbar_spotDiscount"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
@@ -45,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
             android:background="@color/colorPrimary"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:padding="5dp">
 
 
             <android.support.design.widget.TextInputLayout
