--- a/app/src/main/res/layout/activity_terima_part.xml
+++ b/app/src/main/res/layout/activity_terima_part.xml
@@ -33,7 +33,8 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -41,7 +42,7 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:titleTextColor="@color/white_transparency">
+                android:background="?attr/colorPrimary">
 
             </android.support.v7.widget.Toolbar>
 
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
             android:background="@color/colorPrimary"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:padding="5dp">
 
 
             <android.support.design.widget.TextInputLayout
